k8s/book/book-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-service
  template:
    metadata:
      labels:
        app: book-service
    spec:
      containers:
        - name: book-service
          image: book-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
