k8s/book/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-postgres
  template:
    metadata:
      labels:
        app: book-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: book-postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: book-postgres-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: book-postgres
spec:
  selector:
    app: book-postgres
  ports:
    - port: 5432
      targetPort: 5432
