k8s/book/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: book.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-service
                port:
                  number: 80
    - host: book-rabbitmq.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: book-rabbitmq
                port:
                  number: 15672
